Try to prevent long shared-to list from overflowing their container. Not the optimal fix.
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@19591 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_profiles.scss
+++ b/src/main/resources/scss/_profiles.scss
@@ -588,6 +588,9 @@
 
 				.stamp {
 					margin-top: 5px;
+					text-overflow: ellipsis;
+					overflow: hidden;
+
 					.name {font: inherit;}
 
 					span{
